# pagri-projects

./: .gitignore  .nojekyll  README.md  index.html  listings.json  pyproject.toml  robots.txt  search.json  sitemap.xml  styles.css
.github/workflows/: publish.yml
dash_apps/: Dockerfile  requirements.txt
dash_apps/dash_apps_nginx/: requirements.txt
dash_apps/dash_apps_wsgi/: flask_app.py
dash_apps/flask_app/: app.py  dash_app0.py  dashboard_for_yandex_afisha_app.py
dash_apps/nginx/: nginx.conf
dash_apps_gunicorn/flask_app/: app.py  dashboard_for_yandex_afisha_app.py
dash_apps_wsgi/: dashboard_for_yandex_afisha_app.py
presentations/: styles.css
projects/: temp.html
projects/business_metrics_in_yandex_afisha/: business_metrics_in_yandex_afisha.html  temp_for_report.html
projects/churn_prediction_in_fitness_center/: churn_prediction_in_fitness_center.html  temp_for_report.html
projects/creditworthiness-research/: creditworthiness_research.html
projects/housing-ads-investigation/: housing_ads_investigation.html  styles1.css  temp.html
projects/prospective_tariff_for_telecom/: prospective_tariff_for_telecom.html  temp.html  temp_for_report.html
projects/research_of_food_service_industry/: research_of_food_service_industry.html  temp_for_report.html
projects/research_on_video_game_sales/: research_on_video_game_sales.html  temp_for_report.html
projects/revenue_growth_hypotheses/: revenue_growth_hypotheses.html  temp_for_report.html
projects/tt/: dashboard_for_yandex_afisha.html  temp.html
quarto/: .gitignore  _quarto.yml  flatly.scss  index.qmd  styles.css
quarto/docs/: about.html  index.html  listings.json  robots.txt  search.json  sitemap.xml  styles.css
quarto/presentations/: styles.css
quarto/projects/: index.qmd
site_libs/bootstrap/: bootstrap.min.css  (+7 more)
(+54 files in other folders)
