[tool.poetry]
name = "pagri-projects"
version = "0.1.0"
description = ""
authors = ["Pavel Grigoryev <pagri.analytics@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pagri-data-tools = {path = "/home/pagri/git_repos/pagri_analytics_modules", develop = true}
kaleido = "0.2.1"
dash-bootstrap-components = "^1.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
