[tool.poetry]
name = "pagri-projects"
version = "0.1.0"
description = ""
authors = ["Pavel Grigoryev <pagri.analytics@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pagri-data-tools = {path = "/home/pagri/git_repos/pagri_analytics_modules", develop = true}
kaleido = "0.2.1"
dash-bootstrap-components = "^1.6.0"
dash-ag-grid = "^31.2.0"
dash-daq = "^0.5.0"
diskcache = "^5.6.3"
ipynbname = "^2024.1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
