[tool.poetry]
name = "pagri-projects"
version = "0.1.0"
description = ""
authors = ["Pavel Grigoryev <pagri.analytics@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pagri-data-tools = {path = "/home/pagri/git_repos/pagri_analytics_modules", develop = true}
kaleido = "0.2.1"
dash-bootstrap-components = "^1.6.0"
dash-ag-grid = "^31.2.0"
dash-daq = "^0.5.0"
diskcache = "^5.6.3"
ipynbname = "^2024.1.0.0"
notifiers = "^1.3.3"
telepot = "^12.7"
validators = "^0.34.0"
beautifulsoup4 = "^4.12.3"
sqlalchemy = "^2.0.36"
psycopg = "^3.2.3"
psycopg2 = "^2.9.10"
dash-iconify = "^0.1.2"
colorlover = "^0.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
